<resources>
    <string name="app_name">MoviesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>

    <string name="already_have_account">Already have account:Login!</string>
    <string name="not_have_account">Not have an account:Signup!</string>
    <string name="logosplashimage">logoSplashImage</string>
    <string name="the_movie_app">The Movie App</string>
    <string name="_2021_copyright_ahmed">© 2021 Copyright| Ahmed</string>
</resources>

